--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -47,3 +47,5 @@ when@test:
                 cost: 4 # Lowest possible value for bcrypt
                 time_cost: 3 # Lowest possible value for argon
                 memory_cost: 10 # Lowest possible value for argon
+        role_hierarchy:
+            ROLE_ADMIN: ROLE_USER
