--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,6 @@
 .phpunit.result.cache
 ###< phpunit/phpunit ###
 
-###> symfony/phpunit-bridge ###
-.phpunit.result.cache
-/phpunit.xml
-###< symfony/phpunit-bridge ###
-
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
 /public/build/
@@ -29,3 +24,5 @@ yarn-error.log
 ###> symfony CLI ###
 /.php-version
 ###< symfony CLI ###
+
+.idea/
