--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -23,6 +23,9 @@ when@dev:
                 type: console
                 process_psr_3_messages: false
                 channels: ["!event", "!doctrine", "!console"]
+            sentry:
+                type: 'sentry'
+                level: info
             myapp:
                 type: rotating_file
                 path: '%kernel.logs_dir%/myapp.log'
