--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,14 +6,14 @@ x-environment:
     PORT: 8000
     EMAIL_URL: consolemail:// # Example smtp://email:password@smtp_url:port https://glitchtip.com/documentation/install#configuration
     GLITCHTIP_DOMAIN: http://127.0.0.1:8000 # Change this to your domain
-    DEFAULT_FROM_EMAIL: email@glitchtip.com # Change this to your email
+    DEFAULT_FROM_EMAIL: bula.mickael@gmail.com # Change this to your email
     CELERY_WORKER_AUTOSCALE: "1,3"  # Scale between 1 and 3 to prevent excessive memory usage. Change it or remove to set it to the number of cpu cores.
     CELERY_WORKER_MAX_TASKS_PER_CHILD: "10000"
 
 x-depends_on:
   &default-depends_on
-    - postgres
-    - redis
+    postgres
+    redis
 
 services:
     postgres:
