--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "datatables.net": "^1.13.6",
         "datatables.net-bs5": "^1.13.6",
+        "datatables.net-plugins": "^1.13.6",
         "jquery": "^3.7.1"
     }
 }
