--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "datatables.net-bs5": "^1.13.6",
         "datatables.net-plugins": "^1.13.6",
         "jquery": "^3.7.1",
-        "moment": "^2.29.4"
+        "moment": "^2.29.4",
+        "theme-toggles": "^4.10.1"
     }
 }
